--- a/index.css
+++ b/index.css
@@ -23,3 +23,13 @@
   display: flex;
   flex-direction: row;
 }
+
+#reset-game-form {
+  margin-top: 2rem;
+  display: flex;
+  flex-direction: row;
+}
+
+#reset-game-form div {
+  margin-right: 10px;
+}
